fixing height overflow on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,12 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
-  height: 100vh;
+  height: 100%;
   background-color: #e4e2dd;
   display: flex;
   justify-content: center;
